--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha ./test"
   },
-  "author": "",
+  "author": "Dylan Lott <lott.dylan@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.2",
